--- a/index.html
+++ b/index.html
@@ -1317,7 +1317,7 @@ We take the time to inspect your property for signs of termites and treat them a
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="https://cdn1.iconfinder.com/data/icons/insect-and-pest-control/500/Pest-insect-ban-control_8-512.png"
                                 alt=""
                             />
                         </a>
