--- a/index.html
+++ b/index.html
@@ -1296,8 +1296,8 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                                     -webkit-box-orient: vertical;  "
                                 >
                                     Right-of-Way Vegetation Management
-We service 
-Oil field
+                                    We service <br></br>
+                            Oil fields <br></br>
 Industrial sites
 
 We provide attention to detail for our chemical remediation service for oil fields and industrial sites.
@@ -1309,7 +1309,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="https://i.imgur.com/lpuzfnG.jpg"
                                 alt=""
                             />
                         </a>
@@ -1368,7 +1368,7 @@ We take the time to inspect your property for signs of termites and treat them a
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="https://i.imgur.com/5rBuQf3.png"
                                 alt=""
                             />
                         </a>
@@ -2899,7 +2899,7 @@ We take the time to inspect your property for signs of termites and treat them a
                         // let radius = Array.from(document.getElementsByClassName("radius")).map(i => {
                         // return Number(i.innerHTML.trim())
                         // })
-                        let radius = 50
+                        let radius = 500
                         let city = document.querySelector('#city').innerText
                         let state = document.querySelector('#state').innerText
                         let url = `https://maps.googleapis.com/maps/api/geocode/json?address=${city}+${state}&key=AIzaSyDqq7K5Aj5_4wzi7NGzphVphTEJOZcE9dA`
