--- a/gallery-Weed-Remediation.html
+++ b/gallery-Weed-Remediation.html
@@ -1334,7 +1334,7 @@ We take the time to inspect your property for signs of termites and treat them a
                                 <a
                                     href="#"
                                     class="p-1 text-base text-gray-500 rounded hover:text-gray-900 focus:ring-2 focus:outline-none ring-primary ring-opacity-75"
-                                    >Mercury, TX</a
+                                    >All of Texas</a
                                 >
                             </li>
                             
