--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@ We take the time to inspect your property for signs of termites and treat them a
                         fill="currentColor"
                     />
                 </svg>
-                <span class="text-xl">Veteran Owned</span>
+                <span class="text-xl">Hispanic Owned</span>
             </div>
             
             <!-- Single Logo -->
@@ -1065,7 +1065,7 @@ We take the time to inspect your property for signs of termites and treat them a
                         fill="currentColor"
                     />
                 </svg>
-                <span class="text-xl">Locally Owned</span>
+                <span class="text-xl">Minority Owned</span>
             </div>
             
             <!-- Single Logo -->
