--- a/index.html
+++ b/index.html
@@ -1349,7 +1349,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="https://i.imgur.com/lpuzfnG.jpg"
                                 alt=""
                             />
                         </a>
@@ -1407,7 +1407,7 @@ We take the time to inspect your property for signs of termites and treat them a
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="https://i.imgur.com/5rBuQf3.png"
                                 alt=""
                             />
                         </a>
@@ -2857,7 +2857,7 @@ We take the time to inspect your property for signs of termites and treat them a
             <p id="proudLocation" class="text-xl text-gray-500">
                 <!-- Proudly serving Austin, TX and surrounding areas <br /><br />
                 Georgetown, Round Rock, Bastrop, Marble Falls, Burnet -->
-                Proudly Serving   Mercury & Surrounding Areas  
+                Proudly Serving   All of Texas  
             </p>
         </div>
         <!-- Map -->
@@ -2923,7 +2923,7 @@ We take the time to inspect your property for signs of termites and treat them a
                 
                         // Create the map.
                         const map = new google.maps.Map(document.getElementById("map"), {
-                        zoom: 8,
+                        zoom: 5,
                         center: { lat: coordinates[0], lng: coordinates[1]},
                         mapTypeId: "terrain",
                         });
@@ -3155,7 +3155,7 @@ We take the time to inspect your property for signs of termites and treat them a
                               <a
                                   href="#"
                                   class="p-1 text-base text-gray-100 rounded hover:text-gray-300 focus:ring-2 focus:outline-none ring-white ring-opacity-75"
-                                  >Mercury, TX</a
+                                  >All of Texas</a
                               >
                           </li>
                           
