--- a/service-R.O.W.-Vegetation-Management.html
+++ b/service-R.O.W.-Vegetation-Management.html
@@ -1496,7 +1496,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
             <p id="proudLocation" class="text-xl text-gray-500">
                 <!-- Proudly serving Austin, TX and surrounding areas <br /><br />
                 Georgetown, Round Rock, Bastrop, Marble Falls, Burnet -->
-                Proudly Serving   Mercury & Surrounding Areas  
+                Proudly Serving   All of Texas  
             </p>
         </div>
         <!-- Map -->
@@ -1562,7 +1562,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
                 
                         // Create the map.
                         const map = new google.maps.Map(document.getElementById("map"), {
-                        zoom: 8,
+                        zoom: 5,
                         center: { lat: coordinates[0], lng: coordinates[1]},
                         mapTypeId: "terrain",
                         });
@@ -1801,7 +1801,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
                               <a
                                   href="#"
                                   class="p-1 text-base text-gray-100 rounded hover:text-gray-300 focus:ring-2 focus:outline-none ring-white ring-opacity-75"
-                                  >Mercury, TX</a
+                                  >All of Texas</a
                               >
                           </li>
                           
