--- a/service-General-Pest-Control.html
+++ b/service-General-Pest-Control.html
@@ -1687,7 +1687,7 @@ We take the time to inspect your property for signs of termites and treat them a
               <p class="text-base text-gray-100">
                   Maverick Weed &amp; Pest Control<br/>
                    
-                      Mercury, TX <br/>
+                      All of Texas <br/>
                   
                   (432) 448-4913
                   <!-- Is this supposed to be here and correct?  -->
