--- a/index.html
+++ b/index.html
@@ -2739,7 +2739,7 @@ We take the time to inspect your property for signs of termites and treat them a
             <p id="proudLocation" class="text-xl text-gray-500">
                 <!-- Proudly serving Austin, TX and surrounding areas <br /><br />
                 Georgetown, Round Rock, Bastrop, Marble Falls, Burnet -->
-                Proudly Serving   Mercury & Surrounding Areas  
+                Proudly Serving   All of Texas  
             </p>
         </div>
         <!-- Map -->
