--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@ We take the time to inspect your property for signs of termites and treat them a
                 <svg  aria-hidden="true" class="flex-shrink-0 w-12 h-12" fill="none" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M21.6971 1.50293C20.7598 0.565673 19.2402 0.565673 18.303 1.50293L1.50299 18.3029C0.565734 19.2402 0.565734 20.7598 1.50299 21.697C2.44025 22.6343 3.95985 22.6343 4.8971 21.697L5.60005 20.9941V36.8C5.60005 38.1255 6.67457 39.2 8.00005 39.2H12.8C14.1255 39.2 15.2 38.1255 15.2 36.8V32C15.2 30.6745 16.2746 29.6 17.6 29.6H22.4C23.7255 29.6 24.8 30.6745 24.8 32V36.8C24.8 38.1255 25.8746 39.2 27.2 39.2H32C33.3255 39.2 34.4 38.1255 34.4 36.8V20.9941L35.103 21.697C36.0402 22.6343 37.5598 22.6343 38.4971 21.697C39.4344 20.7598 39.4344 19.2402 38.4971 18.3029L21.6971 1.50293Z" fill="currentColor"/>
                 </svg>
-                <span class="text-xl">Locally Owned</span>
+                <span class="text-xl">Minority Owned</span>
             </div>
             
             <!-- Single Logo -->
@@ -1247,7 +1247,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=414&q=80"
+                                src="https://i.imgur.com/lpuzfnG.jpg"
                                 alt=""
                             />
                         </a>
@@ -1305,7 +1305,7 @@ We take the time to inspect your property for signs of termites and treat them a
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=414&q=80"
+                                src="https://i.imgur.com/5rBuQf3.png"
                                 alt=""
                             />
                         </a>
@@ -2863,7 +2863,7 @@ We take the time to inspect your property for signs of termites and treat them a
                 
                         // Create the map.
                         const map = new google.maps.Map(document.getElementById("map"), {
-                        zoom: 8,
+                        zoom: 5,
                         center: { lat: coordinates[0], lng: coordinates[1]},
                         mapTypeId: "terrain",
                         });
