--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@ We provide attention to detail for our chemical remediation service for oil fiel
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=414&q=80"
+                                src="https://i.imgur.com/lpuzfnG.jpg"
                                 alt=""
                             />
                         </a>
@@ -1305,7 +1305,7 @@ We take the time to inspect your property for signs of termites and treat them a
                             <!-- Image -->
                             <img
                                 class="object-cover grayscale"
-                                src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=414&q=80"
+                                src="https://i.imgur.com/5rBuQf3.png"
                                 alt=""
                             />
                         </a>
@@ -2950,7 +2950,7 @@ We take the time to inspect your property for signs of termites and treat them a
                 
                         // Create the map.
                         const map = new google.maps.Map(document.getElementById("map"), {
-                        zoom: 8,
+                        zoom: 5,
                         center: { lat: coordinates[0], lng: coordinates[1]},
                         mapTypeId: "terrain",
                         });
